tests/snapshots/examples_fixtures/primop__effects.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/primop/effects.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/effects.flx:1:1
  |
1 | print("== PrimOps: effects ==");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | -------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/primop/effects.flx:1:1
  |
1 | print("== PrimOps: effects ==");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | -------------------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: Time).

  --> examples/primop/effects.flx:3:1
  |
3 | let t0 = now_ms();
  | ^^^^^^^^^^^^^^^^^^
  | ------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: Time).

  --> examples/primop/effects.flx:4:1
  |
4 | let t1 = clock_now();
  | ^^^^^^^^^^^^^^^^^^^^^
  | --------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/effects.flx:5:1
  |
5 | print(t1 >= t0);
  | ^^^^^^^^^^^^^^^^
  | ---------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/effects.flx:6:1
  |
6 | let content = read_file("examples/io/input.txt");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ------------------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/effects.flx:7:1
  |
7 | print(string_len(content) > 0);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 7 errors.
== stdout ==
<not executed>
